[gd_scene load_steps=8 format=3 uid="uid://dafel8lyrlpbx"]

[ext_resource type="Script" path="res://Scripts/access_screen.gd" id="1_p87uf"]
[ext_resource type="Texture2D" uid="uid://ddwsa6gs8n1p" path="res://Assets/Title Screen/Background.png" id="1_uthqf"]
[ext_resource type="Texture2D" uid="uid://5by05adgc4f7" path="res://Assets/Title Screen/Logo.png" id="2_i7knf"]
[ext_resource type="Texture2D" uid="uid://b2lqg3aoyqb2a" path="res://Assets/Title Screen/Capa.png" id="3_nk8ja"]
[ext_resource type="Theme" uid="uid://bx45csdc1jpf0" path="res://defaultButton.tres" id="4_24t4c"]
[ext_resource type="AudioStream" uid="uid://yls2nuyb4fqw" path="res://Sounds/Intro effect music - SolarMusic - pixabay.com.mp3" id="6_fihvk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qk2tt"]

[node name="access_screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_p87uf")

[node name="BG" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_uthqf")

[node name="game_logo" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -800.0
offset_bottom = 600.0
grow_horizontal = 0
texture = ExtResource("2_i7knf")

[node name="actors" type="TextureRect" parent="."]
layout_mode = 2
offset_left = 200.0
offset_top = 112.0
offset_right = 1280.0
offset_bottom = 844.0
size_flags_horizontal = 8
texture = ExtResource("3_nk8ja")
expand_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 600.0
offset_bottom = 676.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6

[node name="HSeparator10" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_qk2tt")

[node name="HSeparator45" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_qk2tt")

[node name="HSeparator46" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_qk2tt")

[node name="HSeparator47" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_qk2tt")

[node name="HSeparator48" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_qk2tt")

[node name="HSeparator49" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_qk2tt")

[node name="HSeparator50" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_qk2tt")

[node name="HSeparator51" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_qk2tt")

[node name="HSeparator52" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_qk2tt")

[node name="HSeparator53" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_qk2tt")

[node name="HSeparator54" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_qk2tt")

[node name="HSeparator55" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_qk2tt")

[node name="HSeparator56" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_qk2tt")

[node name="HSeparator11" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_qk2tt")

[node name="HSeparator12" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_qk2tt")

[node name="HSeparator13" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_qk2tt")

[node name="HSeparator14" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_qk2tt")

[node name="HSeparator15" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_qk2tt")

[node name="HSeparator16" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_qk2tt")

[node name="HSeparator17" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_qk2tt")

[node name="HSeparator18" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_qk2tt")

[node name="HSeparator19" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_qk2tt")

[node name="HSeparator20" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_qk2tt")

[node name="HSeparator21" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_qk2tt")

[node name="HSeparator22" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_qk2tt")

[node name="HSeparator23" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_qk2tt")

[node name="HSeparator24" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_qk2tt")

[node name="HSeparator25" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_qk2tt")

[node name="HSeparator26" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_qk2tt")

[node name="HSeparator27" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_qk2tt")

[node name="HSeparator28" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_qk2tt")

[node name="HSeparator29" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_qk2tt")

[node name="HSeparator30" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_qk2tt")

[node name="HSeparator31" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_qk2tt")

[node name="HSeparator32" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_qk2tt")

[node name="HSeparator33" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_qk2tt")

[node name="HSeparator34" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_qk2tt")

[node name="HSeparator35" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_qk2tt")

[node name="HSeparator36" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_qk2tt")

[node name="HSeparator37" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_qk2tt")

[node name="HSeparator38" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_qk2tt")

[node name="HSeparator39" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_qk2tt")

[node name="HSeparator40" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_qk2tt")

[node name="HSeparator41" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_qk2tt")

[node name="HSeparator42" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_qk2tt")

[node name="HSeparator43" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_qk2tt")

[node name="HSeparator44" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_qk2tt")

[node name="start_btn" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../quit_btn")
theme = ExtResource("4_24t4c")
theme_override_font_sizes/font_size = 60
text = "       Start       "

[node name="HSeparator" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_qk2tt")

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_qk2tt")

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_qk2tt")

[node name="credits_btn" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_24t4c")
theme_override_font_sizes/font_size = 60
text = "Credits"

[node name="HSeparator4" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_qk2tt")

[node name="HSeparator5" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_qk2tt")

[node name="HSeparator6" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_qk2tt")

[node name="controls_btn" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_24t4c")
theme_override_font_sizes/font_size = 60
text = "Controls"

[node name="HSeparator7" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_qk2tt")

[node name="HSeparator8" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_qk2tt")

[node name="HSeparator9" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_qk2tt")

[node name="quit_btn" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../start_btn")
theme = ExtResource("4_24t4c")
theme_override_font_sizes/font_size = 60
text = "Quit Game"

[node name="access_screen_fx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_fihvk")

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/start_btn" to="." method="_on_start_btn_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/credits_btn" to="." method="_on_credits_btn_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/controls_btn" to="." method="_on_controls_btn_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/quit_btn" to="." method="_on_quit_btn_pressed"]
